  * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
  * Auto kill all processes in container when umounting container.
  * We will always mount / as the first mountpoint.
  * Set the size limit of /dev/shm when memory limit is set.
  * Fix crash on capget().
  * Fix pivot_root does not work.
  * Fix unshare container when pivot_root failed.
  * Enable unshare if detected ns_pid is ruri.
  * Fix qemu path when we pre-mount the rootfs from other source.
  * Add autotest.
  * Fix memory issues.
  * libk2v: Add lenth check for array to avoid overflow.
  * libk2v: rewrite deserialization part.
  * cprintf: Correct the way to get buffer size, avoid overflow.
  * General bug fixes.
# v3.7:
  * Ruri can now recognize [COMMAND [ARGS]...] without absolute path.
  * Add `-f` option: fork() before exec the command in container.
  * Add `-P` option: show process info.
  * Add `-j` option: just chroot, do not create /dev, /proc and /sys.
  * Fix unshare container joining ns.
  * Use pivot_root(2) instead of chroot(2) in unshare and rootless container.
  * Update masked dirs/files.
  * Update easter egg: `ruri AwA`.
  * Add debian packege info.
  * General bug fixes.
# v3.6:
  * Add `uidmap` suid binary support, to fix setgroup() failed in rootless container.
  * ruri can now recognize CONTAINER_DIR path start without `.` or `/`.
  * `-q` option can now use qemu path on host.
  * Support architecture aliases for `-a` option (e.g. arm64=>aarch64).
  * General bug fixes.
# v3.5:
  * Capability can now be controled by value.
  * Support mount files to container.
  * General bug fixes.
# v3.4:
  * Default command wil be /bin/sh if /bin/su does not exist.
  * Fix mount image file.
  * Fix block device as root.
  * Fix configure script.
  * General bug fixes.
# v3.3:
  * Add github action, you can now download static binary.
  * Fix configure script.
  * Fix CAP_LAST_CAP.
  * Update libk2v.
  * Add comments in configs.
  * General bug fixes.
# v3.2: