@@ -13,6 +13,7 @@
   * Fix pivot_root does not work.
   * Fix unshare container when pivot_root failed.
   * Enable unshare if detected ns_pid is ruri.
+  * Correct ns_pid for unshare container when exec command in container again.
   * Fix qemu path when we pre-mount the rootfs from other source.
   * Add autotest.
   * Fix memory issues.
